@@ -161,10 +161,7 @@ static int h2_post_config(apr_pool_t *p, apr_pool_t *plog,
     if (status == APR_SUCCESS) {
         status = h2_switch_init(p, s);
     }
-    if (status == APR_SUCCESS) {
-        status = h2_c2_init(p, s);
-    }
-    
+
     return status;
 }
 
